force-app/main/default/objects/Warranty_Records__dlm/Warranty_Records__dlm.object-meta.xml
<CustomObject>
    <label>Warranty Records</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Warranty Records</labelOverride>
        <masterLabel>Warranty Records</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>