force-app/main/default/objects/Warranty_Records__dlm/fields/ClaimsCount__c.field-meta.xml
<CustomField>
    <fullName>ClaimsCount__c</fullName>
    <label>ClaimsCount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ClaimsCount</labelOverride>
        <masterLabel>ClaimsCount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>