force-app/main/default/objects/Warranty_Records__dlm/fields/CoverageEndDate__c.field-meta.xml
<CustomField>
    <fullName>CoverageEndDate__c</fullName>
    <label>CoverageEndDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CoverageEndDate</labelOverride>
        <masterLabel>CoverageEndDate</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>