force-app/main/default/objects/Warranty_Records__dlm/fields/CoverageStartDate__c.field-meta.xml
<CustomField>
    <fullName>CoverageStartDate__c</fullName>
    <label>CoverageStartDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CoverageStartDate</labelOverride>
        <masterLabel>CoverageStartDate</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>