force-app/main/default/objects/Warranty_Records__dlm/fields/InternalOrganization__c.field-meta.xml
<CustomField>
    <fullName>InternalOrganization__c</fullName>
    <label>Internal Organization</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>Internal Organization</labelOverride>
        <masterLabel>Internal Organization</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>