force-app/main/default/objects/Warranty_Records__dlm/fields/KQ_PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>KQ_PolicyNumber__c</fullName>
    <label>Key Qualifier PolicyNumber</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier PolicyNumber</labelOverride>
        <masterLabel>Key Qualifier PolicyNumber</masterLabel>
        <refAttrDeveloperName>KQ_PolicyNumber</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>