force-app/main/default/objects/Warranty_Records__dlm/fields/rel_1757241774757_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1757241774757_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty_Records_VIN_map_Vehicle_Inf_rel</label>
    <referenceTo>Vehicle_Information__dlm</referenceTo>
    <relationshipLabel>Warranty_Records_VIN_map_Vehicle_Inf_rel</relationshipLabel>
    <relationshipName>rel_1757241774757_end</relationshipName>
    <type>Lookup</type>
</CustomField>