force-app/main/default/objects/Warranty_Records__dlm/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>VIN</labelOverride>
        <masterLabel>VIN</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>