force-app/main/default/objects/Warranty_Records__dlm/fields/WarrantyProvider__c.field-meta.xml
<CustomField>
    <fullName>WarrantyProvider__c</fullName>
    <label>WarrantyProvider</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>WarrantyProvider</labelOverride>
        <masterLabel>WarrantyProvider</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>