force-app/main/default/objects/Warranty_Records__dlm/fields/WarrantyType__c.field-meta.xml
<CustomField>
    <fullName>WarrantyType__c</fullName>
    <label>WarrantyType</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>WarrantyType</labelOverride>
        <masterLabel>WarrantyType</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>